--- a/index.html
+++ b/index.html
@@ -3,39 +3,101 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Steff | Masterpiece Website</title>
+  <title>Steff Website</title>
   <style>
-    body {
+    /* Reset */
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    /* NAVBAR */
+    body, html {
+      height: 100%;
+      font-family: Arial, sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    /* Background */
+    .hero {
+      height: 100vh;
+      background: url('1bae47cb-f1d7-4bfc-9899-0e75bb556dd2.png') no-repeat center center/cover;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: white;
+      position: relative;
+    }
+
+    /* Dark overlay for readability */
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.3);
+      z-index: 1;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .btn {
+      padding: 10px 20px;
+      background: black;
+      color: white;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #444;
+    }
+
+    /* Navbar */
     nav {
       position: fixed;
       top: 0;
+      left: 0;
       width: 100%;
-      background: rgba(51, 51, 51, 0.85);
-      padding: 15px 40px;
+      background: rgba(0,0,0,0.7);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      z-index: 1000;
+      padding: 10px 50px;
+      z-index: 10;
     }
 
     nav .logo {
-      color: white;
-      font-weight: bold;
       font-size: 1.5rem;
-      text-decoration: none;
+      font-weight: bold;
+      color: white;
     }
 
     nav ul {
       list-style: none;
-      margin: 0;
-      padding: 0;
       display: flex;
-      align-items: center;
     }
 
     nav ul li {
@@ -43,89 +105,60 @@
     }
 
     nav ul li a {
-      color: white;
       text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-      transition: color 0.3s;
+      color: white;
+      padding: 10px 15px;
+      display: block;
+      transition: background 0.3s ease;
     }
 
     nav ul li a:hover {
-      color: #ffcc00;
+      background: rgba(255,255,255,0.2);
+      border-radius: 5px;
     }
 
-    /* DROPDOWN */
+    /* Dropdown */
     nav ul li ul {
       display: none;
       position: absolute;
-      background: rgba(51, 51, 51, 0.95);
-      top: 40px;
+      background: rgba(0,0,0,0.9);
+      top: 100%;
       left: 0;
-      list-style: none;
-      padding: 10px 0;
-      border-radius: 5px;
       min-width: 200px;
+      border-radius: 5px;
     }
 
     nav ul li:hover ul {
       display: block;
     }
 
-    nav ul li ul li {
-      padding: 10px 20px;
-    }
-
     nav ul li ul li a {
-      margin: 0;
-      display: block;
+      padding: 10px;
     }
 
-    /* HERO */
-    .hero {
-      height: 100vh;
-      background: 
-        linear-gradient(135deg, rgba(168, 237, 234, 0.7), rgba(254, 214, 227, 0.7)),
-        url("e77c4816-7fb3-4145-8d86-578e1cb75933.png") no-repeat center center/cover;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+    /* Sections */
+    .section {
+      padding: 80px 20px;
       text-align: center;
-      padding: 0 20px;
-      color: white;
     }
 
-    .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
 
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-
-    .btn {
-      background: black;
-      color: white;
-      padding: 12px 25px;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .btn:hover {
-      background: #ffcc00;
-      color: black;
+    .section p {
+      font-size: 1.1rem;
+      max-width: 800px;
+      margin: auto;
     }
   </style>
 </head>
 <body>
 
-  <!-- NAVIGATION -->
+  <!-- Navbar -->
   <nav>
-    <a href="#" class="logo">STEFF</a>
+    <div class="logo">SMVH</div>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
@@ -133,7 +166,7 @@
         <a href="#">Pages ▾</a>
         <ul>
           <li><a href="YOUR_COS_DASHBOARD_LINK" target="_blank">COS Dashboard</a></li>
-          <li><a href="YOUR_MLBUSINESS_LINK" target="_blank">ML Business</a></li>
+          <li><a href="YOUR_ML_BUSINESS_LINK" target="_blank">ML Business</a></li>
           <li><a href="YOUR_PAYROLL_LINK" target="_blank">Payroll Management</a></li>
         </ul>
       </li>
@@ -142,28 +175,45 @@
     </ul>
   </nav>
 
-  <!-- HERO SECTION -->
+  <!-- Hero Section -->
   <section class="hero" id="home">
-  <h1>Welcome to my masterpiece!</h1>
-  <p>Beautiful space to share my story, my business, and the passions I care about most.</p>
-  <a href="#about" class="btn">DISCOVER MORE</a>
-</section>
+    <div class="hero-content">
+      <h1>Welcome to my masterpiece!</h1>
+      <p>Beautiful space to share my story, my business, and the passions I care about most.</p>
+      <a href="#portfolio" class="btn">DISCOVER MORE</a>
+    </div>
+  </section>
 
-<style>
-.hero {
-  height: 100vh;
-  background: 
-    linear-gradient(135deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
-    url("https://drive.google.com/uc?export=view&id=1FwvZoSS7ZdZN1nfq98ZPjaKWfkO7V1jM") no-repeat center center/cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 0 20px;
-  color: white;
-}
-</style>
+  <!-- Sections -->
+  <div class="section" id="about">
+    <h2>About Me</h2>
+    <p>Hi 👋 I’m Steff, a passionate individual who loves creating meaningful work, balancing professionalism with creativity. This page is where I share my journey and the things I love.</p>
+  </div>
 
+  <div class="section" id="portfolio" style="background:white;">
+    <h2>My Business</h2>
+    <p>Welcome to my space 🌱. Here, I focus on helping clients grow through efficiency, creativity, and dedication. Soon, you’ll find access to my dashboards and tools.</p>
+  </div>
+
+  <div class="section" id="passion">
+    <h2>Passion Projects</h2>
+    <p>I enjoy exploring new skills, learning continuously, and creating projects that inspire positivity and growth. ✨</p>
+  </div>
+
+  <div class="section" id="contact" style="background:white;">
+    <h2>Contact</h2>
+    <p>Email me at: <b>stephanyhingpittheexecutiveva@gmail.com</b></p>
+  </div>
+
+<footer>
+    <p>© 2025 Steff's Masterpiece | Built with ❤️ and creativity</p>
+  </footer>
+
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("menu");
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    }
+  </script>
 </body>
 </html>
