--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <!-- Hero Section with Video -->
   <section class="hero">
     <video autoplay muted loop id="bg-video">
-      <source src="https://drive.google.com/uc?export=download&id=1L_23OpNA2_iyaQraopQ-yUYuFOXKUJ73" type="video/mp4">
+      <source src="Untitled design.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero-content">
@@ -216,3 +216,4 @@
   </footer>
 </body>
 </html>
+
