--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <!-- Hero Section with Video -->
   <section class="hero">
     <video autoplay muted loop id="bg-video">
-      <source src="Untitled design.mp4" type="video/mp4">
+      <source src="https://github.com/smvhingpityourvirtualassistant/my_website/raw/refs/heads/main/Untitled%20design%20(1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero-content">
@@ -216,4 +216,5 @@
   </footer>
 </body>
 </html>
+
 
