--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     .btn {
       padding: 10px 20px;
-      background: black;
+      background: #AAC8A7;
       color: white;
       font-weight: bold;
       border: none;
@@ -81,7 +81,7 @@
     }
 
     .btn:hover {
-      background: #444;
+      background: #AAC8A7;
     }
 
     /* Navbar */
@@ -152,7 +152,15 @@
     }
 
     .section:nth-child(even) {
-      background: #f9f9f9;
+      background: #E9FFC2
+    }
+
+     /* Footer */
+    footer {
+      background: black;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
@@ -216,5 +224,6 @@
   </footer>
 </body>
 </html>
+
 
 
