--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      background: rgba(0,0,0,0.7);
+      background: RGB(112,130,56);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -101,7 +101,7 @@
     nav .logo {
       font-size: 1.5rem;
       font-weight: bold;
-      color: white;
+      color: ;
     }
 
     nav ul {
@@ -152,12 +152,12 @@
     }
 
     .section:nth-child(even) {
-      background: #E9FFC2
+      background: RGB(193,225,193)
     }
 
      /* Footer */
     footer {
-      background: black;
+      background: RGB(112,130,56);
       color: white;
       text-align: center;
       padding: 20px;
@@ -224,6 +224,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
