--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
       <li>
         <a href="#">Pages ▾</a>
         <ul>
-          <li><a href="YOUR_COS_DASHBOARD_LINK" target="_blank">COS Dashboard</a></li>
-          <li><a href="YOUR_ML_BUSINESS_LINK" target="_blank">ML Business</a></li>
+          <li><a href="https://script.google.com/macros/s/AKfycbxO3gp9zCAbeCrvrfAPjKZ1xWl4_RkRPDg1dDmTYStP/dev" target="_blank">COS Dashboard</a></li>
+          <li><a href="https://script.google.com/macros/s/AKfycbwoYoWw_ENZyzRl-rNdnjrVqLaWRUqrHSBehyeihws/dev" target="_blank">ML Business</a></li>
           <li><a href="YOUR_PAYROLL_LINK" target="_blank">Payroll Management</a></li>
         </ul>
       </li>
@@ -224,6 +224,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
