--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <!-- Navbar -->
   <nav>
-    <div class="logo">SMVH | Webpage</div>
+    <div class="logo">SMVH | Webpage - your trusted virtual assistant</div>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Portfolio</a></li>
@@ -201,7 +201,7 @@
   <!-- Sections -->
   <div class="section" id="about">
     <h2>About Me</h2>
-    <p>Hi 👋 I’m Steff, a passionate individual who loves creating meaningful work, balancing professionalism with creativity. This page is where I share my journey and the things I love.</p>
+    <p>Hi 👋 I’m Steffy, a passionate individual who loves creating meaningful work, balancing professionalism with creativity. This page is where I share my journey and the things I love.</p>
   </div>
 
   <div class="section" id="business">
@@ -220,10 +220,11 @@
   </div>
     
     <footer>
-      <p>© 2025 Steff's Masterpiece | Built with ❤️</p>
+      <p>© 2025 SMVH Masterpiece | Built with ❤️</p>
   </footer>
 </body>
 </html>
+
 
 
 
