--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     }
 
     nav .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
+      font-size: 1rem;
+      font-weight: Italics;
       color: ;
     }
 
@@ -224,6 +224,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
