--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     }
 
     nav .logo {
-      font-size: 1rem;
-      font-weight: Italics;
+      font-size: 1.5rem;
+      font-weight: BOLD;
       color: ;
     }
 
@@ -168,7 +168,7 @@
 
   <!-- Navbar -->
   <nav>
-    <div class="logo">SMVH | Webpage - your trusted virtual assistant</div>
+    <div class="logo">SMVH | Webpage</div>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Portfolio</a></li>
@@ -201,7 +201,7 @@
   <!-- Sections -->
   <div class="section" id="about">
     <h2>About Me</h2>
-    <p>Hi 👋 I’m Steffy, a passionate individual who loves creating meaningful work, balancing professionalism with creativity. This page is where I share my journey and the things I love.</p>
+    <p>Hi 👋 I’m Steffy, your trusted virtual assistant, a passionate individual who loves creating meaningful work, balancing professionalism with creativity. This page is where I share my journey and the things I love.</p>
   </div>
 
   <div class="section" id="business">
@@ -224,6 +224,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
