--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     }
 
     .hero p {
-      font-size: 1.2rem;
+     font-size: 1.6rem; 
+      font-family: 'Birthstone', cursive; /* Signature style */
       margin-bottom: 2rem;
     }
 
@@ -100,8 +101,8 @@
 
     nav .logo {
       font-size: 1.5rem;
-      font-weight: BOLD;
-      color: ;
+      font-family: 'Birthstone', cursive; /* Signature style */
+      color: white;
     }
 
     nav ul {
@@ -224,6 +225,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
